tests/compile-fail/compile_fail__stackless__untyped_var.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: feature not supported by format
   ┌─ <input>:28:9
   │
28 │         var x;
   │         ^^^ untyped variables not supported by format


